<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Titolo -->
        <TextView
            android:id="@+id/addTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:layout_below="@id/addTitleText"
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ins_title" />

        <!-- Descrizione -->
        <TextView
            android:id="@+id/addDescrText"
            android:layout_below="@id/addTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descr"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:layout_below="@id/addDescrText"
            android:id="@+id/addDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ins_descr" />

        <!-- A chi è assegnato -->
        <TextView
            android:id="@+id/addAssignedText"
            android:layout_below="@id/addDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assigned"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/addAssigned"
            android:layout_below="@+id/addAssignedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ins_assigned" />

        <!-- Data di scadenza -->
        <TextView
            android:id="@+id/addExpiringText"
            android:layout_below="@id/addAssigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expirationText"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <DatePicker
            android:id="@+id/addDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addExpiringText"
            android:layout_marginTop="0dp"
            android:calendarViewShown="true" />

        <TimePicker
            android:id="@+id/addTime"
            android:layout_width="384dp"
            android:layout_height="96dp"
            android:layout_below="@id/addDate"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/submitTaskButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addTime"
            android:layout_marginTop="5sp"
            android:text="@string/submitSave" />
    </RelativeLayout>
</ScrollView>
